Added Colab Badges

--- a/Week 01 - Introduction to Python/Python II.ipynb
+++ b/Week 01 - Introduction to Python/Python II.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Python II\n",
         "\n",
-        "{{ badge }}"
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 01 - Introduction to Python/Python II.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->"
       ]
     },
     {
