--- a/Week 01 - Introduction to Python/Python III.ipynb
+++ b/Week 01 - Introduction to Python/Python III.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Python III\n",
         "\n",
-        "{{ badge }}"
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 01 - Introduction to Python/Python III.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->"
       ]
     },
     {
@@ -311,7 +311,7 @@
       },
       "source": [
         "### OS\n",
-        "The OS module in Python provides functions for interacting with the operating system. OS comes under Python’s standard utility modules. This module provides a portable way of using operating system-dependent functionality. The *os* and *os.path* modules include many functions to interact with the file system."
+        "The OS module in Python provides functions for interacting with the operating system. OS comes under Python\u2019s standard utility modules. This module provides a portable way of using operating system-dependent functionality. The *os* and *os.path* modules include many functions to interact with the file system."
       ]
     },
     {
@@ -457,7 +457,7 @@
       },
       "source": [
         " **os.listdir()** <br>\n",
-        "os listdir method  is used to get the list of all files and directories in the specified directory. If we don’t specify any directory, then the list of files and directories in the current working directory will be returned."
+        "os listdir method  is used to get the list of all files and directories in the specified directory. If we don\u2019t specify any directory, then the list of files and directories in the current working directory will be returned."
       ]
     },
     {
@@ -907,7 +907,7 @@
       "source": [
         "### Tqdm\n",
         "\n",
-        "`tqdm` derives from the Arabic word taqaddum (تقدّم) which can mean \"progress,\" and is an abbreviation for \"I love you so much\" in Spanish (te quiero demasiado).\n",
+        "`tqdm` derives from the Arabic word taqaddum (\u062a\u0642\u062f\u0651\u0645) which can mean \"progress,\" and is an abbreviation for \"I love you so much\" in Spanish (te quiero demasiado).\n",
         "\n",
         "Instantly make your loops show a smart progress meter - just wrap any iterable with tqdm(iterable), and you're done!"
       ]
@@ -941,7 +941,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 10000000/10000000 [00:02<00:00, 4638216.06it/s]\n"
+            "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 10000000/10000000 [00:02<00:00, 4638216.06it/s]\n"
           ]
         }
       ],
