--- a/Week 02 - Data Science Libraries/3- Pandas.ipynb
+++ b/Week 02 - Data Science Libraries/3- Pandas.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Pandas\n",
         "\n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 02 - Data Science Libraries/3- Pandas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "One of the downsides of NumPy is that it is difficult to work with data that is heterogenous (that is, of mixed data types). Such data is very common, however. Pandas (https://pandas.pydata.org/) is a Python library makes working with such data significantly easier. Similar to NumPy, Pandas is often used to work with tabular data. The two primary data structures are the [Series](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.html) (one-dimensional arrays) and the [DataFrame](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html#pandas.DataFrame) (two-dimensional arrays, which can be thought of as dictionaries of Series). \n",
         "\n",
@@ -4621,7 +4621,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>500 rows × 2 columns</p>\n",
+              "<p>500 rows \u00d7 2 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e309ac88-1551-40fc-95a0-da9b4063b996')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -4830,7 +4830,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>500 rows × 1 columns</p>\n",
+              "<p>500 rows \u00d7 1 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f46ba045-23d0-4802-9f3e-d479ebd265bb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -6686,7 +6686,7 @@
         "5. \"Unit-free measure\" means that correlations exist on their own scale: in our example, the number given for r is not on the same scale as either elevation or temperature. This is different from other summary statistics. For instance, the mean of the elevation measurements is on the same scale as its variable.\n",
         "\n",
         "\n",
-        "Let’s get a closer look at what this means and how correlation can be useful. There are three types of correlations:\n",
+        "Let\u2019s get a closer look at what this means and how correlation can be useful. There are three types of correlations:\n",
         "\n",
         "**Positive Correlation:** means that if feature A increases then feature B also increases or if feature A decreases then feature B also decreases. Both features move in tandem and they have a linear relationship.\n",
         "\n",
@@ -6889,7 +6889,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>3000 rows × 9 columns</p>\n",
+              "<p>3000 rows \u00d7 9 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d0fd3927-2502-45d0-bf01-87ab32eba315')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
