--- a/Week 03 - Machine Learning Algorithms/3- More_Models.ipynb
+++ b/Week 03 - Machine Learning Algorithms/3- More_Models.ipynb
@@ -8,7 +8,7 @@
       },
       "source": [
         "# KNN \n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 03 - Machine Learning Algorithms/3- More_Models.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "KNN is a non-parametric and lazy learning algorithm. Non-parametric means there is no assumption for underlying data distribution. In other words, the model structure determined from the dataset. This will be very helpful in practice where most of the real-world datasets do not follow mathematical theoretical assumptions.\n"
       ]
@@ -221,7 +221,7 @@
         "\n",
         "The goal of using a Decision Tree is to create a training model that can use to predict the class or value of the target variable by learning simple decision rules inferred from prior data(training data).\n",
         "\n",
-        "In Decision Trees, for predicting a class label for a record we start from the root of the tree. We compare the values of the root attribute with the record’s attribute. On the basis of comparison, we follow the branch corresponding to that value and jump to the next node.\n",
+        "In Decision Trees, for predicting a class label for a record we start from the root of the tree. We compare the values of the root attribute with the record\u2019s attribute. On the basis of comparison, we follow the branch corresponding to that value and jump to the next node.\n",
         "\n",
         " \n",
         "\n",
