--- a/Week 04 - Advance Machine Learning/2- Cross_Validation.ipynb
+++ b/Week 04 - Advance Machine Learning/2- Cross_Validation.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Cross Validation\n",
         "\n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 04 - Advance Machine Learning/2- Cross_Validation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "\n",
         "\n",
