--- a/Week 05 - Deep Learning Algorithms/1- Tensorflow.ipynb
+++ b/Week 05 - Deep Learning Algorithms/1- Tensorflow.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Tensorflow \n",
         "\n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 05 - Deep Learning Algorithms/1- Tensorflow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "\n",
         "\n",
@@ -1442,22 +1442,22 @@
         "id": "wBt5mTE-R9l0"
       },
       "source": [
-        "• First, we need to create an Input object. This is a specification of the kind of input the model will get, including its shape and dtype. A model may actually\n",
+        "\u2022 First, we need to create an Input object. This is a specification of the kind of input the model will get, including its shape and dtype. A model may actually\n",
         "have multiple inputs, as we will see shortly.\n",
         "\n",
-        "• Next, we create a Dense layer with 512 neurons, using the leak_relu activation func‐tion. As soon as it is created, notice that we call it like a function, passing it the\n",
+        "\u2022 Next, we create a Dense layer with 512 neurons, using the leak_relu activation func\u2010tion. As soon as it is created, notice that we call it like a function, passing it the\n",
         "input. This is why this is called the Functional API. Note that we are just telling\n",
         "tensorflow  how it should connect the layers together; no actual data is being processed yet.\n",
         "\n",
-        "• We then create a second hidden layer, and again we use it as a function. Note that we pass it the output of the first hidden layer.\n",
+        "\u2022 We then create a second hidden layer, and again we use it as a function. Note that we pass it the output of the first hidden layer.\n",
         "\n",
-        "• We then create a third hidden layer, and again we use it as a function. Note that we pass it the output of the second hidden layer.\n",
-        "\n",
-        "\n",
-        "• Then we create the output layer, with a 10 neuron's and softmax as  activation function.\n",
+        "\u2022 We then create a third hidden layer, and again we use it as a function. Note that we pass it the output of the second hidden layer.\n",
         "\n",
         "\n",
-        "• Lastly, we create a tensorflow Model, specifying which inputs and outputs to use.\n"
+        "\u2022 Then we create the output layer, with a 10 neuron's and softmax as  activation function.\n",
+        "\n",
+        "\n",
+        "\u2022 Lastly, we create a tensorflow Model, specifying which inputs and outputs to use.\n"
       ]
     },
     {
@@ -1712,23 +1712,23 @@
         "id": "obZBbNEERIWj"
       },
       "source": [
-        "• First, we need to create an Input object. This is a specification of the kind of input the model will get, including its shape and dtype. A model may actually\n",
+        "\u2022 First, we need to create an Input object. This is a specification of the kind of input the model will get, including its shape and dtype. A model may actually\n",
         "have multiple inputs, as we will see shortly.\n",
         "\n",
-        "• Next, we create a Dense layer with 512 neurons, using the ReLU activation function. As soon as it is created, notice that we call it like a function, passing it the\n",
+        "\u2022 Next, we create a Dense layer with 512 neurons, using the ReLU activation function. As soon as it is created, notice that we call it like a function, passing it the\n",
         "input. This is why this is called the Functional API. Note that we are just telling\n",
         "tensorflow  how it should connect the layers together; no actual data is being processed yet.\n",
         "\n",
-        "• We then create a second hidden layer, and again we use it as a function. Note that we pass it the output of the first hidden layer.\n",
+        "\u2022 We then create a second hidden layer, and again we use it as a function. Note that we pass it the output of the first hidden layer.\n",
         "\n",
-        "• Next, we create a Concatenate layer, and once again we immediately use it like a\n",
+        "\u2022 Next, we create a Concatenate layer, and once again we immediately use it like a\n",
         "function, to concatenate the input and the output of the second hidden layer. You may prefer the `tf.keras.layers.concatenate()` function, which creates a\n",
         "Concatenate layer and immediately calls it with the given inputs.\n",
         "\n",
-        "• Then we create the output layer, with a 10 neuron and softmax as  activation function,\n",
+        "\u2022 Then we create the output layer, with a 10 neuron and softmax as  activation function,\n",
         "and we call it like a function, passing it the result of the concatenation.\n",
         "\n",
-        "• Lastly, we create a tensorflow Model, specifying which inputs and outputs to use.\n"
+        "\u2022 Lastly, we create a tensorflow Model, specifying which inputs and outputs to use.\n"
       ]
     },
     {
@@ -1916,15 +1916,15 @@
       },
       "source": [
         "\n",
-        "• First, we need to create  the block function for the model we will call it wide_net_block and the function will get the input with hidden units of the layers with dropout rate for the dropout layer with block name .\n",
+        "\u2022 First, we need to create  the block function for the model we will call it wide_net_block and the function will get the input with hidden units of the layers with dropout rate for the dropout layer with block name .\n",
         "\n",
-        "• Next, inside the wide_net_block function  we create a Dense layer , using the ReLU activation func‐tion. As soon as it is created, notice that we call it like a function, passing it the\n",
+        "\u2022 Next, inside the wide_net_block function  we create a Dense layer , using the ReLU activation func\u2010tion. As soon as it is created, notice that we call it like a function, passing it the\n",
         "x. This is why this is called the Functional API. Note that we are just telling\n",
         "tensorflow  how it should connect the layers together; no actual data is being processed yet.\n",
         "\n",
-        "• We then create a second hidden layer, and again we use it as a function. Note that we pass it the output of the first hidden layer.\n",
+        "\u2022 We then create a second hidden layer, and again we use it as a function. Note that we pass it the output of the first hidden layer.\n",
         "\n",
-        "• Next, we create a Concatenate layer, and once again we immediately use it like a\n",
+        "\u2022 Next, we create a Concatenate layer, and once again we immediately use it like a\n",
         "function, to concatenate the input and the output of the second hidden layer. You may prefer the `tf.keras.layers.concatenate()` function, which creates a\n",
         "Concatenate layer and immediately calls it with the given inputs.\n",
         "\n",
@@ -2047,22 +2047,22 @@
         "id": "YN5vnZIiPrwK"
       },
       "source": [
-        "• First, we need to create an Input object. This is a specification of the kind of input the model will get, including its shape and dtype. A model may actually\n",
+        "\u2022 First, we need to create an Input object. This is a specification of the kind of input the model will get, including its shape and dtype. A model may actually\n",
         "have multiple inputs, as we will see shortly.\n",
         "\n",
-        "• Next, we create a block with 256 neurons,. As soon as it is created, notice that we call it like a function, passing it the\n",
+        "\u2022 Next, we create a block with 256 neurons,. As soon as it is created, notice that we call it like a function, passing it the\n",
         "input. This is why this is called the Functional API. Note that we are just telling\n",
         "tensorflow  how it should connect the layers together; no actual data is being processed yet.\n",
         "\n",
-        "• We then create a second block, and again we use it as a function. Note that we pass it the output of the first block.\n",
+        "\u2022 We then create a second block, and again we use it as a function. Note that we pass it the output of the first block.\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "• Then we create the output layer, with a 10 neuron's and softmax as  activation function.\n",
+        "\u2022 Then we create the output layer, with a 10 neuron's and softmax as  activation function.\n",
         "\n",
         "\n",
-        "• Lastly, we create a tensorflow Model, specifying which inputs and outputs to use.\n"
+        "\u2022 Lastly, we create a tensorflow Model, specifying which inputs and outputs to use.\n"
       ]
     },
     {
