--- a/Week 01 - Introduction to Python/Python I.ipynb
+++ b/Week 01 - Introduction to Python/Python I.ipynb
@@ -8,7 +8,7 @@
       },
       "source": [
         "# Python I\n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 01 - Introduction to Python/Python I.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "Python is an interpreted high-level general-purpose programming language. Its design philosophy emphasizes code readability with its use of significant indentation. Its language constructs as well as its object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects.\n",
         "\n",
