--- a/Week 02 - Data Science Libraries/2- Matplotlib.ipynb
+++ b/Week 02 - Data Science Libraries/2- Matplotlib.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Matplotlib\n",
         "\n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 02 - Data Science Libraries/2- Matplotlib.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "\n",
         "As its name suggests, Matplotlib is a library for creating plots, graphs, charts, etc., of data. Its syntax is influenced by Matlab. It is possbile visualize data contained in simple lists and tuples, but Matplotlib can also work effectively NumPy and Pandas data structures.  Below, we will specifically work with the `pyplot` routines.\n",
