--- a/Week 08 – Computer Vision Applications/1- AutoEncoder_for_Colored_Images.ipynb
+++ b/Week 08 – Computer Vision Applications/1- AutoEncoder_for_Colored_Images.ipynb
@@ -5,7 +5,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "{{ badge }}"
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 08 \u2013 Computer Vision Applications/1- AutoEncoder_for_Colored_Images.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->"
       ]
     },
     {
@@ -103,7 +103,7 @@
       "source": [
         "# Create the Data Pipline with Adding Random Noise to the Images\n",
         "\n",
-        "While solving the problem statement, we have to remember our goal which is to make a model that is capable of performing noise removal on images. To be able to do this, we will use existing images and add them to random noise. Here we will feed the original images as input and we get the noisy images as output and our model (i.e, autoencoder) will learn the relationship between a clean image and a noisy image and learn how to clean a noisy image. So let’s create a noisy version of our fashion mnist dataset and give it as input to the decoder network."
+        "While solving the problem statement, we have to remember our goal which is to make a model that is capable of performing noise removal on images. To be able to do this, we will use existing images and add them to random noise. Here we will feed the original images as input and we get the noisy images as output and our model (i.e, autoencoder) will learn the relationship between a clean image and a noisy image and learn how to clean a noisy image. So let\u2019s create a noisy version of our fashion mnist dataset and give it as input to the decoder network."
       ]
     },
     {
