--- a/Week 08 – Computer Vision Applications/2- Semantic_segmentation.ipynb
+++ b/Week 08 – Computer Vision Applications/2- Semantic_segmentation.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# semantic segmentation\n",
         "\n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 08 \u2013 Computer Vision Applications/2- Semantic_segmentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "\n",
         "In semantic segmentation, each pixel is classified according to the class of the object it belongs to (e.g., road, car, pedestrian, building, etc.), as shown in the Figure \n",
@@ -21,7 +21,7 @@
         "Note that different objects of the same class are not distinguished. For example, all the bicycles on the right side of the segmented image end up as one big lump of pixels. \n",
         "\n",
         "Themain difficulty in this task is that when images go through a regular CNN, they gradually lose their spatial resolution (due to the layers with strides greater than 1); so, a\n",
-        "regular CNN may end up knowing that there’s a person somewhere in the bottom left of the image, but it will not be much more precise than that.\n"
+        "regular CNN may end up knowing that there\u2019s a person somewhere in the bottom left of the image, but it will not be much more precise than that.\n"
       ]
     },
     {
@@ -209,7 +209,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>5000 rows × 2 columns</p>\n",
+              "<p>5000 rows \u00d7 2 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -551,7 +551,7 @@
         "id": "LIq1HSeeKlRO"
       },
       "source": [
-        "U-Net is an architecture for semantic segmentation. It consists of a contracting path (encoder) and an expansive path (decoder). The contracting path follows the typical architecture of a convolutional network. It consists of the repeated application of two 3x3 convolutions (unpadded convolutions), each followed by a BatchNormalization than (Leaky_relu) and a 2x2 max pooling operation with stride 2 for downsampling. At each downsampling step we double the number of feature channels. Every step in the expansive path consists of an upsampling of the feature map followed by a 2x2 convolution (“up-convolution”) that halves the number of feature channels, a concatenation with the correspondingly cropped feature map from the contracting path, and two 3x3 convolutions, each followed by a BatchNormalization than (Leaky_relu). At the final layer a 1x1 convolution is used to map each 32-component feature vector to the desired number of classes. "
+        "U-Net is an architecture for semantic segmentation. It consists of a contracting path (encoder) and an expansive path (decoder). The contracting path follows the typical architecture of a convolutional network. It consists of the repeated application of two 3x3 convolutions (unpadded convolutions), each followed by a BatchNormalization than (Leaky_relu) and a 2x2 max pooling operation with stride 2 for downsampling. At each downsampling step we double the number of feature channels. Every step in the expansive path consists of an upsampling of the feature map followed by a 2x2 convolution (\u201cup-convolution\u201d) that halves the number of feature channels, a concatenation with the correspondingly cropped feature map from the contracting path, and two 3x3 convolutions, each followed by a BatchNormalization than (Leaky_relu). At the final layer a 1x1 convolution is used to map each 32-component feature vector to the desired number of classes. "
       ]
     },
     {
