--- a/Week 08 – Computer Vision Applications/3- Face_recognition.ipynb
+++ b/Week 08 – Computer Vision Applications/3- Face_recognition.ipynb
@@ -8,7 +8,7 @@
       },
       "source": [
         "# Face Recognition \n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 08 \u2013 Computer Vision Applications/3- Face_recognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "\n",
         "\n"
@@ -5205,7 +5205,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 202599/202599 [00:01<00:00, 198392.62it/s]\n"
+            "100%|\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 202599/202599 [00:01<00:00, 198392.62it/s]\n"
           ]
         },
         {
@@ -5306,7 +5306,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>10000 rows × 3 columns</p>\n",
+              "<p>10000 rows \u00d7 3 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f8acf36b-c125-4fc1-8119-d18b576c4a0c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -5598,7 +5598,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>9000 rows × 3 columns</p>\n",
+              "<p>9000 rows \u00d7 3 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7868d201-41d3-45e4-8240-65bf78d0db8b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
