--- a/Week 10 - More Advanced DL Applications/2- Recommenders_Retrieval.ipynb
+++ b/Week 10 - More Advanced DL Applications/2- Recommenders_Retrieval.ipynb
@@ -8,7 +8,7 @@
       },
       "source": [
         "# Recommendation Systems\n",
-        "{{ badge }}\n",
+        "<!--<badge>--><a href=\"https://colab.research.google.com/github/mthd98/Machine-Learning-from-Zero-to-Hero-Bootcamp-v1/blob/main/Week 10 - More Advanced DL Applications/2- Recommenders_Retrieval.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><!--</badge>-->\n",
         "\n",
         "\n",
         "\n",
@@ -77,8 +77,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\u001b[K     |████████████████████████████████| 85 kB 2.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 462 kB 4.8 MB/s \n",
+            "\u001b[K     |\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 85 kB 2.4 MB/s \n",
+            "\u001b[K     |\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588| 462 kB 4.8 MB/s \n",
             "\u001b[?25h"
           ]
         }
@@ -269,7 +269,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>1682 rows × 3 columns</p>\n",
+              "<p>1682 rows \u00d7 3 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f303f397-84a0-4765-b5b9-da8a1bdcb71b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
@@ -601,7 +601,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>100000 rows × 12 columns</p>\n",
+              "<p>100000 rows \u00d7 12 columns</p>\n",
               "</div>\n",
               "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a57fb45-b900-41ce-ab04-b353113fd513')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
